# skillscraper

./: .gitignore  README.md  dev_testing.ipynb  main.py  posting_0.html  posting_1.html  posting_10.html  posting_11.html  posting_12.html  posting_13.html  posting_14.html  posting_15.html  posting_16.html  posting_17.html  posting_18.html  posting_19.html  posting_2.html  posting_20.html  posting_21.html  posting_22.html  posting_23.html  posting_3.html  posting_4.html  posting_5.html  posting_6.html  posting_7.html  posting_8.html  posting_9.html  pyproject.toml  sample.html
output/: descriptions_2021-12-27.csv  results_2021-12-26.csv  results_2021-12-27.csv
output/berlin/: descriptions_2021-12-25.csv  results_2021-12-25.csv
output/boston/: 2021-12-28_11.txt  2021-12-28_12.txt  2021-12-28_13.txt  2021-12-28_14.txt  2021-12-28_15.txt  2021-12-28_16.txt  2021-12-28_18.txt  2021-12-28_20.txt  2021-12-28_25.txt  2021-12-28_26.txt  2021-12-28_28.txt  2021-12-28_3.txt  2021-12-28_34.txt  2021-12-28_35.txt  2021-12-28_38.txt  2021-12-28_41.txt  2021-12-28_46.txt  2021-12-28_47.txt  2021-12-28_48.txt  2021-12-28_53.txt  2021-12-28_6.txt  2021-12-28_60.txt  2021-12-28_61.txt  2021-12-28_62.txt  2021-12-28_63.txt  2021-12-28_66.txt  2021-12-28_71.txt
output/los_angeles/: 2021-12-28_1.txt  2021-12-28_18.txt  2021-12-28_19.txt  2021-12-28_2.txt  2021-12-28_24.txt  2021-12-28_25.txt  2021-12-28_8.txt  (+15 more)
skillscraper/: __init__.py  aws.txt  client.py  keywords.txt  log.py  parse.py  scraper.py  utils.py
tests/: async.py  test.txt  test_extractor.py  test_parse.py  test_utils.py
(+138 files in other folders)
