[tool.poetry]
name = "skillscraper"
version = "0.1.0"
description = "A little tool to keep track of keywords used in job postings on LinkedIn (hopefully)"
authors = ["Adam Hoffstein <adam.hoffstein@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.10.0"
requests = "^2.26.0"
fake-useragent = "^0.1.11"
pandas = "^1.3.5"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
