[tool.poetry]
name = "skillscraper"
version = "0.1.0"
description = "A little tool to keep track of keywords used in job postings on LinkedIn (hopefully)"
authors = ["Adam Hoffstein <adam.hoffstein@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.10.0"
requests = "^2.26.0"
pandas = "^1.3.5"
loguru = "^0.5.3"
asyncio = "^3.4.3"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"
ipykernel = "^6.6.0"
pytest = "^6.2.5"
mypy = "^0.930"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
